# ndnm-backend

./: .gitignore  .readme  CLAUDE.md  Cargo.toml  GLITCH_MANIFESTO.md  PLAY_SYSTEM.md  README.md  RESUMO_SESSAO_FASE2.md  TESTE_FASE2.md  test_execution.json
.claude/: settings.local.json
ndnm-backend/: Cargo.toml
ndnm-backend/ndnm-brazil/: Cargo.toml  README.md
ndnm-backend/ndnm-exdoida/: Cargo.toml  README.md
ndnm-backend/ndnm-hermes/: Cargo.toml  README.md
ndnm-backend/ndnm-libs/: Cargo.toml  README.md
ndnm-backend/nodes/node-file-browser/: Cargo.toml  config.yaml
ndnm-brazil/: Cargo.toml  config.yaml
ndnm-brazil/src/: main.rs
ndnm-brazil/src/execution/: executor.rs  mod.rs  resolver.rs  types.rs
ndnm-core/: Cargo.toml
ndnm-core/src/: config.rs  error.rs  lib.rs  runner.rs  server.rs
ndnm-core/src/config/: mod.rs
ndnm-core/src/error/: mod.rs
ndnm-core/src/node/: mod.rs
ndnm-core/src/runner/: mod.rs
ndnm-core/src/server/: mod.rs  router.rs
ndnm-core/tests/: config_sections_test.rs  load_real_fs_browser_config.rs  router_smoke.rs
node-clip-text-encode-py/: main.py  requirements.txt
node-comfy-play/: Cargo.toml  config.yaml
node-comfy-play/src/: main.rs
node-empty-latent-image/: Cargo.toml  config.json  config.yaml
node-empty-latent-image/.cargo/: config.toml
node-empty-latent-image/src/: domain.rs  main.rs
node-empty-latent-image/tests/: integration_test.rs
node-ex-doida/: Cargo.toml  config.yaml  ppp_config.yaml
node-ex-doida/src/: main.rs  roaster.rs
node-fixed-value/: Cargo.toml  config.yaml
node-fixed-value/src/: main.rs
node-fs-browser/: Cargo.toml  config.md  config.yaml
node-fs-browser/src/: domain.rs  main.rs
node-ksampler/: config.json  config.yaml  main.py  requirements.txt
node-list-directory/: Cargo.toml  config.json  config.yaml
node-list-directory/src/: domain.rs  main.rs
node-load-checkpoint/: Cargo.toml  config.json  config.yaml
node-load-checkpoint/src/: domain.rs  main.rs
node-play-button/: Cargo.toml  config.yaml
node-play-button/src/: main.rs
node-subtract/: Cargo.toml  config.json  config.yaml
node-subtract/src/: domain.rs  main.rs
node-subtract/tests/: integration_test.rs
node-sum/: Cargo.toml  config.yaml
node-sum/src/: domain.rs  main.rs
node-sum/tests/: integration_test.rs
workspaces/: workspace-1.json
