# Cargo.toml (na raiz do projeto)
[workspace]
members = [
    "ndnm-core",
    "node-sum",
    "node-subtract",
    "node-load-checkpoint",
    "node-empty-latent-image",
    "node-list-directory",
    "ndnm-brazil",
    "node-fixed-value",
    "node-fs-browser",
    "node-play-button",
    "node-comfy-play",
    "node-ex-doida",
]
resolver = "2"
