[package]
name = "ndnm-brazil"
version = "0.1.0"
edition = "2021"
default-run = "ndnm-brazil"

[dependencies]
# Nossa caixa de ferramentas base
ndnm-core = { path = "../ndnm-core" }

# O trio elétrico do async Rust
tokio = { version = "1", features = ["full"] }
futures-util = { version = "0.3", features = ["sink"] }

# O framework web que a gente ama
axum = { version = "0.7", features = ["ws"] }

# CORS middleware
tower-http = { version = "0.5", features = ["cors"] }

# Serialização/Deserialização de JSON
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Linha de comando
clap = { version = "4.5", features = ["derive"] }

# LOG e timestamps
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"

# WebSockets com Tokio
tokio-tungstenite = "0.23"

# Chamadas HTTP para outros nodes
reqwest = { version = "0.12", features = ["json"] }

# Geração de IDs aleatórios
rand = "0.8"

[dev-dependencies]
# Para futuros testes
axum = "0.7"
tower = { version = "0.4", features = ["util"] }