#ndnm-core/Cargo.toml
[package]
name = "ndnm-core"
version = "0.1.0"
edition = "2021"

# Dependências do core
[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
clap = { version = "4.5", features = ["derive"] }

# Dependências apenas para os testes
[dev-dependencies]
tower = "0.4"