# ndnm-core/Cargo.toml
[package]
name = "ndnm-core"
version = "0.1.0"
edition = "2021"

# Dependências do core
[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
clap = { version = "4.5", features = ["derive"] }
async-trait = "0.1"

# --- NOSSA NOVA MAGIA ---
# Adicionamos a capacidade de ler YAML
serde_yaml = "0.9"

# Dependências apenas para os testes
[dev-dependencies]
axum = "0.7"
tower = { version = "0.4", features = ["util"] }
serde_json = "1" # Mantemos para testes se necessário