# C:/Projetos/ndnm/ndnm-backend/node-empty-latent-image/Cargo.toml
[package]
name = "node-empty-latent-image"
version = "0.1.0"
edition = "2021"
default-run = "node-empty-latent-image"

[dependencies]
ndnm-core = { path = "../ndnm-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["full"] }

# REMOVED CANDLE - using simple array approach instead

# Dependências necessárias apenas para compilar e rodar os testes.
[dev-dependencies]
axum = "0.7"
tower = { version = "0.4", features = ["util"] }
serde_json = "1"