# node-ex-doida/Cargo.toml
[package]
name = "node-ex-doida"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tower-http = { version = "0.5", features = ["cors"] }
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
