# node-fs-browser/Cargo.toml
[package]
name = "node-fs-browser"
version = "0.1.0"
edition = "2021"
default-run = "node-fs-browser"

[dependencies]
ndnm-core = { path = "../ndnm-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["full"] }

# Para lidar com I/O de disco
walkdir = "2"
# FIX E0432: Adicionado chrono
chrono = { version = "0.4", features = ["serde"] }