# viniciusxpb/ndnm-backend/ndnm-backend-c893a1ebc17c6070ecb4b86d83dbca22839369a/node-fs-browser/Cargo.toml
[package]
name = "node-fs-browser"
version = "0.1.0"
edition = "2021"
default-run = "node-fs-browser"

[dependencies]
ndnm-core = { path = "../ndnm-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] } 
tower-http = { version = "0.5", features = ["cors"] } 

# FIX E0433: Adicionado axum para usar axum::serve no main.rs
axum = "0.7"