# node-list-directory/Cargo.toml
[package]
name = "node-list-directory"
version = "0.1.0"
edition = "2021"
default-run = "node-list-directory"

[dependencies]
# A nossa caixa de ferramentas!
ndnm-core = { path = "../ndnm-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["full"] }

# --- NOSSA NOVA BRUXARIA ---
# Crate pra lidar com datas e horas de um jeito bonito.
# Habilitamos a feature "serde" pra ele conversar direto com o JSON.
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
axum = "0.7"
tower = { version = "0.4", features = ["util"] }