# node-load-checkpoint/Cargo.toml
[package]
name = "node-load-checkpoint"
version = "0.1.0"
edition = "2021"
default-run = "node-load-checkpoint"

[dependencies]
ndnm-core = { path = "../ndnm-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
# A biblioteca mágica para ler checkpoints!
safetensors = "0.4.5"

[dev-dependencies]
axum = "0.7"
tower = { version = "0.4", features = ["util"] }